rspec-tools/tests/resources/invalid-rules/S101/csharp/rule.adoc
== How to fix it in Foo Bar Framework
